@@ -5,3 +5,6 @@
 - check all std::cout and std:cerr if they couldn't be replaced with 
   the DebugModule's methods. The idea is to have a more consistant
   code.
+- All libfreebobavc interfaces should use references instead of pointers
+  like in  ExtendedPlugInfoCmd( Ieee1394Service* ieee1394service, ... )
+  ->  ExtendedPlugInfoCmd( Ieee1394Service& ieee1394service,
